--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
   <div align="center">
     <h1>Welcome</h1>
     <h2>This application was deployed using AWS CodeDeploy.</h2>
-<h2>Version 1.6</h2>
+<h2>Version 1.6</h2> <br>
+<h3>Created Git Account </h3><br>
+<h4>Imported Application from Ishant-Kumar Repository </h4> 
     <p></p>
   </div>
 </body>
