--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Sample Deployment</title>
+  <title>Sample Deployment Practice </title>
   <style>
     body {
       color: #ffffff;
-      background-color: #0188cc;
+      background-color: #0545cc;
       font-family: Arial, sans-serif;
-      font-size: 14px;
+      font-size: 20px;
     }
     
     h1 {
@@ -28,12 +28,12 @@
   <div align="center">
     <h1>Welcome</h1>
     <h2>This application was deployed using AWS CodeDeploy.</h2>
-<h2>Version 1.6</h2> <br>
+<h2>Version 1.9</h2> <br>
 <h3>Created Git Account </h3><br>
 <h4>Imported Application from Ishant-Kumar Repository </h4> 
-<h5> Deployment getting failed </h5>
+<h5> Prctice Success </h5>
 
-    <p>Finally got it up and running </p>
+    <p> Running...  </p>
   </div>
 </body>
 </html>			
