--- a/ContactUs.html
+++ b/ContactUs.html
@@ -4,57 +4,100 @@
 <title> AWS Sample Blog </title>
 
 <style>
-body {background-color:lightgray}
-h1   {color:blue; font-size:200%;	}
-h3   {color:red; font-size:125%;	}
-p    {color:green}
+	h1 {color:white;	font-family:verdana;    font-size:130%; }
+	h2 {color:#B22222;	font-family:verdana;	font-size:112%;}
+	h3 {color:#191970;	font-family:verdana;	font-size:106%;}
+	h4 {color:##FFA500;	font-family:verdana;	font-size:100%;}
+	h5 {font-size:100%;}
+	#header {
+ 		    background-color:black;
+		    color:white;
+		    text-align:center;
+		    padding:5px;
+		}
+
+	#nav {
+		    line-height:32px;
+		    background-color:#eeeeee;
+		    height:465px;
+		    width:190px;
+		    float:left;
+		    padding:10px; 
+		}
+
+	#section {
+		    width:850px;
+		    float:left;
+		    display:inline-block;
+		    padding:10px; 
+		}
+
+	#footer {
+		    background-color:white;
+		    color:black;
+		    height:125px;
+		    clear:both;
+		    text-align:center;
+ 		    padding:5px; 
+		}
 </style>
+
 
 
 
 <body>
 
-<center><h1> Amazon Web Services </h1></center>
-<br>
-
-<h3> You can provide your details here </h3>
-
-
-<table style="width:20%">
-<form action="project.php" method="post">
-
-<tr>	
-	<td>	First Name:</td><td><input type="text" name="FirstName">	</td>
-<tr>
-
-<tr>
-	<td>	Last Name:</td><td><input type="text" name="LastName">	</td>
-</tr>
-
-<tr>
-	<td>	Email:</td><td><input type="text" name="Email">	</td>
-</tr>
-
-<tr>
-	<td>	Phone:</td><td><input type="text" name="ContactPhone">	</td>
-</tr>
-
-<tr>
-	<td>	Comments:</td><td><input type="text" name="Comments">	</td>
-</tr>
+<div id="header">
+	<img id='topLogo' src='https://s3-eu-west-1.amazonaws.com/sumanth.royale321/Logo.png' alt='problem downloading image' style="height:70px;width:500px";>
+	<center> <h1> Welcome to the AWS World! </h1> </center>
+</div>
 
 
-</table>
+
+
+
+<div id="section">
+	<table style="width:50%">
+
+		<form action="project.php" method="post">
+
+		<tr>
+			<h3> You can provide your contact details here </h3>
+		</tr>
+
+		<tr>	
+			<td>	First Name: </td><td><input type="text" name="FirstName">	</td>
+		<tr>	
+	
+		<tr>
+			<td>	Last Name:</td><td><input type="text" name="LastName">	</td>
+		</tr>
+
+		<tr>
+			<td>	Email:</td><td><input type="text" name="Email">	</td>
+		</tr>
+
+		<tr>
+			<td>	Phone:</td><td><input type="text" name="ContactPhone">	</td>
+		</tr>
+
+		<tr>
+			<td>	Comments:</td><td><input type="text" name="Comments">	</td>
+		</tr>
+
+	
+	</table>
 <br>
 
 <input type="submit">	
-<br>
 
 </form>
+</div>
 
-<br><br>
+<div id="footer">
+	<h4>	<a href='/AboutUs.html'> About us </a>	</h4> <p>	Copyright © Sampleblog.in	</p><h4>	<a href='/index.html'> Home </a>	</h4>
+</div>
 
-<a href='/index.html'> Home </a>
 
 </body>
 </html>
