--- a/index.html
+++ b/index.html
@@ -2,76 +2,97 @@
 <html lang="en-US">
 
 <title> AWS Sample Blog </title>
+
 <style>
-body {background-color:lightgray}
-h1 { color:black;     font-family:verdana;    font-size:300%; }
-h3 { color:blue;	font-family:verdana;	font-size:175%;}
-p  {color:green;	font-size:150%;	}
-pre {color:magenta; font-size:112%;	}
+	h1 {color:white;	font-family:verdana;    font-size:130%; }
+	h2 {color:#B22222;	font-family:verdana;	font-size:112%;}
+	h3 {color:#191970;	font-family:verdana;	font-size:106%;}
+	h4 {color:##FFA500;	font-family:verdana;	font-size:100%;}
+	h5 {font-size:100%;}
+	#header {
+ 		    background-color:black;
+		    color:white;
+		    text-align:center;
+		    padding:5px;
+		}
+
+	#nav {
+		    line-height:32px;
+		    background-color:#eeeeee;
+		    height:465px;
+		    width:190px;
+		    float:left;
+		    padding:10px; 
+		}
+
+	#section {
+		    width:750px;
+		    float:left;
+		    display:inline-block;
+		    padding:10px; 
+		}
+
+	#footer {
+		    background-color:white;
+		    color:black;
+		    height:125px;
+		    clear:both;
+		    text-align:center;
+ 		    padding:5px; 
+		}
 </style>
+
+
 
 <body>
 
-<center> <h1> Welcome to the AWS World! </h1> </center>
-<br>
+<div id="header">
+	<img id='topLogo' src='https://s3-eu-west-1.amazonaws.com/sumanth.royale321/Logo.png' alt='problem downloading image' style="height:70px;width:500px";>
+	<center> <h1> Welcome to the AWS World! </h1> </center>
+</div>
 
 
-<div id='AboutUs'></div><div id='topABT' class='top'>
-<img id='topLogo' src='/images/w3schools.png' alt='problem downloading image' class='img-responsive'>
-<br>
 
-<h3> Amazon Web Services </h3>
-<br> <br>
-<pre> This is a sample blog application. You can find static content in Home and About Us pages. <br>
-In contactus page, you can enter your contact details which will be stored on Database. 
-</pre>
-<br> <br>
+<div id="nav">
+	
+	<u><h5>	Cloud Service Providers	</h5></u>
+	Amazon Web Services	<br>
+	Google Cloud	<br>
+	Microsoft Azure	<br>
+	VM Ware	<br>
+	BlueLock	</br>
+	Citrix	<br>
+	Joyent	<br>
+	Verizon / Terremark	<br>
+	Salesforce	<br>
+	CenturyLink	<br>
+	RackSpace	<br>
+	
+</div>
 
-<a href='/AboutUs.html'> About Us </a>
-<br>
-<br>
-<a href='/ContactUs.html'> Contact Us </a>
+<div id="section">
+	
+	<p><u><h2>	Top 3 Cloud Providers across the globe </h2></u></p><br>
+
+	<d1>
+		<dt><h3>	(1) Amazon Web Services	</h3></dt>
+		<dd><p>	Amazon Web Services (AWS), a collection of remote computing services, also called web services, make up a cloud-computing platform offered by Amazon.com. These services operate from 11 geographical regions across the world. The most central and well-known of these services arguably include Amazon Elastic Compute Cloud and Amazon S3. Amazon markets these products as a service to provide large computing-capacity more quickly and more cheaply than a client company building an actual physical server farm. </p></dd>
+
+		<dt><h3>	(2) Google Cloud Platform	</h3></dt>
+		<dd><p> Google Cloud Platform is a cloud computing platform by Google that offers hosting on the same supporting infrastructure that Google uses internally for end-user products like Google Search and YouTube. Cloud Platform provides developer products to build a range of programs from simple websites to complex applications.	</p></dd>
+		
+		<dt><h3>	(3) Microsoft Azure Cloud	</h3></dt>
+		<dd><p> Microsoft Azure is a cloud computing platform and infrastructure, created by Microsoft, for building, deploying and managing applications and services through a global network of Microsoft-managed and Microsoft partner hosted datacenters. It provides both PaaS and IaaS services and supports many different programming languages, tools and frameworks, including both Microsoft-specific and third-party software and systems	</p></dd>
+		
+	</d1>
+
+</div>
+
+<div id="footer">
+	<h4>	<a href='/AboutUs.html'> About us </a>	</h4> <p>	Copyright © Sampleblog.in	</p><h4>	<a href='/ContactUs.html'> Contact us </a>	</h4>
 
 </div>
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-    
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
